<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bck_color"
        tools:context=".activity.SignUpActivity">
    <TextView
            android:id="@+id/txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:fontFamily="@font/poppins"
            android:text="@string/you_can_use_your_social_media_accounts_for_registration_or_do_it_manually"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:textStyle="bold"
            android:textColor="@color/dark"/>
    <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins"
            android:padding="10dp"
            android:text="@string/sign_up_with_your_social_media_accounts"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt"
            android:textColor="@color/dark"/>

    <LinearLayout
            android:id="@+id/linearSocial"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/txt1">

        <ImageButton
                android:id="@+id/btnFacebook"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_facebook"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"/>
        <ImageButton
                android:id="@+id/btnTwitter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_twitter"
                android:layout_marginStart="20dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"/>
    </LinearLayout>
    <ScrollView
            android:id="@+id/scrol"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearSocial"
            app:layout_constraintBottom_toTopOf="@+id/guide">

        <LinearLayout android:layout_width="match_parent"
                      android:layout_height="wrap_content"
                      app:layout_constraintLeft_toLeftOf="parent"
                      app:layout_constraintRight_toRightOf="parent"
                      android:orientation="vertical"
                      android:padding="16dp"
                      android:background="@drawable/ic_background">

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark"
                      android:fontFamily="@font/poppins"
                      android:textStyle="bold"
                      android:text="@string/add_your_profile_picture"/>

            <com.innovantics.cityeats.views.CircleImageView
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:src="@drawable/ic_add_photo_profile"/>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark"
                      android:fontFamily="@font/poppins"
                      android:textStyle="bold"
                      android:layout_marginTop="10dp"
                      android:text="@string/enter_your_first_name"/>
            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_first_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/first_name">

                <EditText
                        android:id="@+id/editFirstName"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/poppins"
                        android:layout_height="wrap_content"
                        android:inputType="textCapWords"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark"
                      android:textStyle="bold"
                      android:fontFamily="@font/poppins"
                      android:layout_marginTop="5dp"
                      android:text="@string/enter_your_last_name"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/last_name">

                <EditText
                        android:id="@+id/editLastName"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/poppins"
                        android:inputType="textCapWords"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark"
                      android:textStyle="bold"
                      android:layout_marginTop="5dp"
                      android:text="@string/enter_your_email"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/text_input_email"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/poppins"
                    android:layout_height="wrap_content"
                    android:hint="@string/email">

                <EditText
                        android:id="@+id/editEmail"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/poppins"
                        android:inputType="textEmailAddress"
                        android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <TextView android:layout_width="wrap_content"
                      android:layout_height="wrap_content"
                      android:textColor="@color/dark"
                      android:textStyle="bold"
                      android:fontFamily="@font/poppins"
                      android:layout_marginTop="5dp"
                      android:text="@string/pick_your_date_of_birth"/>

            <TextView
                    android:id="@+id/txtDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:drawableStart="@drawable/ic_calendar"
                    android:layout_marginTop="4dp"
                    android:drawablePadding="10dp"
                    android:fontFamily="@font/poppins"
                    android:hint="@string/pick_a_date"
                    android:textColorHint="@color/colorAccent"
                    android:layout_marginBottom="10dp"
                    android:textAllCaps="true"
                    android:gravity="center"
            />
        </LinearLayout>
    </ScrollView>
    <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_percent="0.9"/>

    <Button
            android:id="@+id/btnSignUp"
            android:layout_width="112dp"
            android:layout_height="36dp"
            android:background="@color/colorAccent"
            android:text="@string/sign_up"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/white"
            app:layout_constraintTop_toBottomOf="@+id/guide"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginBottom="20dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>