<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bck_color"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        tools:context=".activity.DashboardActivity"
        tools:showIn="@layout/activity_dashboard">


    <FrameLayout
            android:id="@+id/container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/linearBottom"/>



    <LinearLayout
            android:id="@+id/linearBottom"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:weightSum="3"
            android:background="@android:color/white"
            android:gravity="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

        <TextView
                android:id="@+id/txtRestaurants"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_restaurants_"
                android:layout_weight="1"
                android:fontFamily="@font/poppins"
                android:gravity="center"
                android:paddingTop="10dp"
                android:text="@string/restaurants"/>
        <TextView
                android:id="@+id/txtReview"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:fontFamily="@font/poppins"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_restaurants_trans"
                android:layout_weight="1"
                android:text="@string/new_review"
                android:gravity="center"/>
        <TextView
                android:id="@+id/txtProfile"
                android:layout_width="0dp"
                android:paddingTop="10dp"
                android:fontFamily="@font/poppins"
                android:layout_height="match_parent"
                android:drawableTop="@drawable/ic_account"
                android:layout_weight="1"
                android:text="@string/my_profile"
                android:gravity="center"/>
    </LinearLayout>

    <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/circle_grey"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.963">
        <ImageButton
                android:id="@+id/btnAdd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_fab"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:elevation="10dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.97"
                android:contentDescription="@string/app_name"/>
    </FrameLayout>
</androidx.constraintlayout.widget.ConstraintLayout>