<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:background="@color/bck_color"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context=".fragments.FilterFragment">

    <include
            android:id="@+id/relativeHeaderFilter"
            layout="@layout/custom_header"/>
    <RelativeLayout
            android:id="@+id/relativeOpen"
            android:layout_width="0dp"
            android:layout_height="45dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeHeaderFilter"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            android:elevation="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/ic_background"
            android:layout_margin="10dp">
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/open_now"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@+id/switchOpen"
                android:layout_marginEnd="20dp"
                android:fontFamily="@font/poppins"
                android:textColor="@color/dark"/>

        <Switch
                android:id="@+id/switchOpen"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/relativeEstablish"
            android:layout_width="0dp"
            android:layout_height="72dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeOpen"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            android:elevation="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/ic_background"
            android:layout_marginTop="10dp">
        <ImageView
                android:id="@+id/img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_establishment_type"
                android:contentDescription="@string/app_name"/>
        <TextView
                android:id="@+id/txt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/establishment_type"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img"
                android:textColor="@color/dark"/>
        <TextView
                android:id="@+id/txtEstablish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/not_chosen"
                android:layout_below="@+id/txt"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img"
                android:textColor="@color/dark"/>

        <ImageView
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/app_name"/>
    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/relativeCuisine"
            android:layout_width="0dp"
            android:layout_height="72dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeEstablish"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            android:elevation="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/ic_background"
            android:layout_marginTop="40dp">
        <ImageView
                android:id="@+id/img1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_cuisine_type"/>
        <TextView
                android:id="@+id/txt1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cuisine_type"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img1"
                android:textColor="@color/dark"/>
        <TextView
                android:id="@+id/txtCuisine"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/not_chosen"
                android:fontFamily="@font/poppins"
                android:layout_below="@+id/txt1"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img1"
                android:textColor="@color/dark"/>

        <ImageView
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/app_name"/>
    </RelativeLayout>


    <RelativeLayout
            android:id="@+id/relativeDietary"
            android:layout_width="0dp"
            android:layout_height="72dp"
            app:layout_constraintTop_toBottomOf="@+id/relativeCuisine"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:gravity="center_vertical"
            android:elevation="8dp"
            android:paddingEnd="16dp"
            android:paddingStart="16dp"
            android:background="@drawable/ic_background">
        <ImageView
                android:id="@+id/img3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_dietary_restrictions"/>
        <TextView
                android:id="@+id/txt3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dietary_restrictions"
                android:textSize="16sp"
                android:fontFamily="@font/poppins"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img3"
                android:textColor="@color/dark"/>
        <TextView
                android:id="@+id/txtDietary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="@string/not_chosen"
                android:fontFamily="@font/poppins"
                android:layout_below="@+id/txt3"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@id/img3"
                android:textColor="@color/dark"/>

        <ImageView
                android:layout_width="18dp"
                android:layout_height="16dp"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/ic_arrow"
                android:contentDescription="@string/app_name"/>
    </RelativeLayout>

    <Button
            android:id="@+id/btnApplyFilter"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:fontFamily="@font/poppins"
            android:textColor="@android:color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            android:background="@color/colorAccent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:text="@string/apply_filters"/>
</androidx.constraintlayout.widget.ConstraintLayout>