<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/bck_color"
        tools:context=".activity.SignUpActivity">

    <LinearLayout
            android:id="@+id/linear"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_margin="10dp"
            android:padding="16dp"

            android:background="@drawable/ic_background">
        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/enter_your_phone_number"
                  android:textSize="18sp"
                  android:textColor="@android:color/black"
                  android:textStyle="bold"/>
        <RelativeLayout android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center">

        <com.hbb20.CountryCodePicker
                android:id="@+id/codePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                app:ccp_defaultNameCode="NG"
                app:ccp_showFlag="false"/>
        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/codePicker"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                app:errorEnabled="true">
            <EditText
                    android:id="@+id/editPhone"
                    android:layout_width="match_parent"
                    android:textSize="14sp"
                    android:maxLength="10"
                    android:layout_height="56dp"
                    android:fontFamily="@font/poppins"
                   android:hint="@string/enter_your_phone_number"/>
        </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <Button
                android:id="@+id/btnContinue"
                android:layout_width="112dp"
                android:layout_height="36dp"
                android:text="@string/continue1"
                android:fontFamily="@font/poppins"
                android:textColor="@android:color/white"
                android:background="@color/colorAccent"
                android:layout_gravity="center"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="20dp"/>

    </LinearLayout>

    <LinearLayout
            android:id="@+id/linearSign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:elevation="8dp"
            app:layout_constraintVertical_bias="0.9"
            app:layout_constraintTop_toBottomOf="@+id/linear"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent">

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:textColor="@android:color/black"
                  android:text="Have an account?" tools:ignore="HardcodedText"/>

        <TextView android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:text="@string/sign_in"
                  android:textStyle="bold"
                  android:textColor="@color/colorAccent"
                  android:textAllCaps="true"/>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>